# LLM-Safety-platform

./: .dockerignore  .pre-commit-config.yaml  Dockerfile  README.md  build_corpus.py  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: cicd.yml
app/: auth.py  config.py  db.py  scan.py  server.py
configs/: general.yaml
deploy/: capstone.service
frontend/src/: App.jsx
scripts/: generate.py  main.py
src/app/: auth.py  config.py  db.py  explain.py  scan.py  server.py
src/configs/: general.yaml
src/frontend/: package-lock.json
src/frontend/src/: App.css  App.jsx  main.jsx
src/frontend/src/components/: CompareSelectModal.jsx  ConfigSection.jsx  Header.jsx  RecentScans.jsx  ResultSection.jsx  ScanModal.jsx  ScanModuleCard.jsx  Sidebar.jsx  StatusDisplay.jsx
src/frontend/src/constants/: colorRules.js
src/frontend/src/context/: AuthContext.jsx
src/frontend/src/pages/: ComparePage.jsx  HistoryPage.jsx  HomePage.jsx  LoginPage.jsx  ProfilePage.jsx  SignupPage.jsx
src/frontend/src/styles/: auth.css  compare.css  config-section.css  layout.css  result.css  scan-module.css  sidebar.css  utilities.css  variables.css
src/frontend/src/utils/: api.js  colorUtils.js
src/scanner/: detector.py  inference.py
src/scanner/modules/: gcg_adversarial.py  memory_extraction.py  obfuscation.py  prompt_injection.py  refusal_direction.py  safety_margin.py  sampling_stability.py
