[project]
name = "ai-safety"
version = "0.1.0"
description = "Modern platform to test LLMs for various vulnerabilites."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "datasets>=5.0.0",
    "transformers>=5.12.0",
    "vllm",
    "torch>=2.12.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "huggingface-hub>=0.34.0",
    "openai>=1.0.0",
    "psycopg[binary]>=3.1",
    "pyyaml>=6.0",
    "pydantic>=2.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
]